# starnavi-treasure-hunt

./: README.md  pyproject.toml  run.py
tests/: conftest.py  test_fp_implementation.py  test_oop_implementation.py
treasure_hunt/: __init__.py  treasure_map.txt
treasure_hunt/fp_implementation/: __init__.py  treasure_hunt.py  utils.py
treasure_hunt/oop_implementation/: __init__.py  treasure_hunt.py
