[tool.poetry]
name = "starnavi-treasure-hunt"
version = "0.1.0"
description = ""
authors = ["yshzz <yshzz2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pytest = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
